applications/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  type: ClusterIP

  selector:
    app: headlamp

  ports:
    - name: http
      port: 80
      targetPort: 4466
      protocol: TCP
